--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,9 +21,10 @@
   <body>
       <header class="tc pa1 bb bg-washed-blue b--light-gray">
          <nav class="db dt-l w-100 border-box pa3 ph5-l">
-            <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-              <img src="{{ "img/Rick_Run_201409 120x120.JPG" | relURL }}" class="dib w2 h2 br-100" alt="Site Name">
+           <a class="db dtc-l v-mid gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="{{ "/" | relURL }}" title="Home">
+             <img src="{{ "img/Rick_Run_201409 120x120.JPG" | relURL }}" class="dib w2 h2 br-100" alt="Rick Cogley Photo">
             </a>
+            <h1 class="lightest-blue">♠RClive♡</h1>
             <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
               <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "/" | relURL }}" title="Home">Home</a>
               <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "post"| relURL }}" title="Archive">Archive</a>
