--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,7 +28,8 @@
             <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
               <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "/" | relURL }}" title="Home">Home</a>
               <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "post"| relURL }}" title="Archive">Archive</a>
-            <a class="link dim dark-green f6 f5-l dib" href="https://rick.cogley.info/about" title="About Rick Cogley" target="_blank">About Me</a>
+              <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "tags"| relURL }}" title="Tags">Tags</a>
+              <a class="link dim dark-green f6 f5-l dib" href="https://rick.cogley.info/about" title="About Rick Cogley" target="_blank">About Me</a>
             </div>
          </nav>
       </header>
