--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -1,3 +1,4 @@
+{{ "<!-- ENTERING layouts/_default/section.html -->" | safeHTML }}
 {{ partial "header.html" . }}
 
 <main class="mw7 center">
@@ -15,3 +16,5 @@
 </main>
 
 {{ partial "footer.html" . }}
+{{ "<!-- LEAVING layouts/_default/section.html -->" | safeHTML }}
+
