--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,44 +1,22 @@
 {{ partial "header.html" . }}
-<body>
-{{ partial "bodytop.html" . }}
-    <div id="layout" class="pure-g">
-        {{ partial "sidebar.html" . }}
-        {{ partial "hometop.html" . }}
-
-        <div class="content pure-u-1 pure-u-md-3-4">
-            <a name="top"></a> {{ partial "listtop_home.html" . }}
-
-            <main>
-                <div class="posts">
-                    <section class="post">
-                        <header class="post-header">
-                            <h1 class="post-title">Oh Dear, it's the dreaded &laquo;{{ .Title }}&raquo;</h1>
-                        </header>
-                            <article class="post-summary">
-                            Thanks for visiting. You've reached my 404 page, meaning the content you tried to access cannot be found. Use the site search feature, or scan the below list of site taxonomies and click through to something of interest.
-                            <ul>
-                            {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
-                            <li><a href="/{{ $taxonomyname | urlize }}"><h2>{{ $taxonomyname }}</h2></a>
-                                <ul>
-                                {{ range $key, $value := $taxonomy }}
-                                <li><h3>{{ $key }}</h3></li>
-                                    <ul>
-                                    {{ range $value.Pages }}
-                                    <li hugo-nav="{{ .RelPermalink }}"><a href="{{ .Permalink}}"><em>{{ .LinkTitle }}</em></a></li>
-                                    {{ end }}
-                                    </ul>
-                                {{ end }}
-                                </ul>
-                            </li>
-                            {{ end }}
-                            </ul>
-                            </article>
-                    </section>
-                </div>
-            </main>
-            {{ partial "footer.html" . }}
-        </div>
-    </div>
-    {{ partial "bodyend.html" . }}
-</body>
-</html>
+  <main class="mw7 center">
+    <h1 class="ttu fw4 dark-pink">&#xE380; The dreaded &laquo;{{ .Title }}&raquo;&nbsp;&#x2620;</h1>
+    Thanks for visiting. You've reached my 404 page, meaning the content you tried to access cannot be found. Scan the below list of site taxonomies and click through to something of interest.
+    <ul>
+    {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
+      <li><a class="link dim" href="/{{ $taxonomyname | urlize }}"><h2 class="dark-green">{{ $taxonomyname }}</h2></a>
+          <ul>
+          {{ range $key, $value := $taxonomy }}
+          <li><h3>{{ $key }}</h3></li>
+              <ul>
+              {{ range $value.Pages }}
+              <li hugo-nav="{{ .RelPermalink }}"><a class="link dim dark-pink" href="{{ .Permalink}}"><em>{{ .LinkTitle }}</em></a></li>
+              {{ end }}
+              </ul>
+          {{ end }}
+          </ul>
+      </li>
+      {{ end }}
+      </ul>
+  </main>
+{{ partial "footer.html" . }}
