--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,6 +8,7 @@
               </nav>
               <small>Made with <svg xmlns="http://www.w3.org/2000/svg" class="red" viewBox="0 0 32 32" width="10" height="10"><use xlink:href="#heart"></use></svg> and <a class="link dim blue" href="https://gohugo.io/" target="_blank"><b>Hugo</b></a> by Rick Cogley &copy; {{ now.Format "2006"}}</small>
         </small>
+        {{ if .IsPage }}<small class="gray"><em>Updated: {{ .Page.Lastmod }}, Version: {{ .GitInfo.AbbreviatedHash }}</em></small>{{ end }}
 </footer>
 </body>
 </html>
