--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,11 +1,18 @@
-{{ partial "header.html" . }}
+{{ define "header" }}
+  {{- partial "header.html" . -}}
+{{ end }}
+{{ define "main" }}
 
   <main class="mw7 center">
 
     <h1>{{ .Title }}</h1>
-    <h2>{{ .Date.Format "Jan 2, 2006" }}</h2>
+    <h2>{{ .Date.Format "Monday, 2 Jan, 2006" }}</h2>
       {{ .Content }}
 
   </main>
 
-{{ partial "footer.html" . }}
+{{ end }}
+{{ define "footer" }}
+  {{- partial "footer.html" . -}}
+{{ end }}
+
