Add test _index.md and reference it via {{ .Content }}

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -5,14 +5,15 @@
 <main class="mw7 center">
   <div>
    <h1 class="ttu fw4 f2 near-white">{{ .Title }} Archive</h1>
-            {{ range .Data.Pages.GroupByDate "2006" }}
+       {{ .Content }}
+           {{ range .Data.Pages.GroupByDate "2006" }}
             <h2 class="ttu f3 blue">{{ .Key }}</h2>
                 <ul class="list pnl">
                     {{ range .Pages }}
                         {{ .Render "li"}}
                     {{ end }}
                 </ul>
-            {{ end }}
+          {{ end }}
   </div>
 </main>
 {{ end }}
