--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,8 @@
 {{ define "main" }}
   <main class="mw7 center">
     <h1 class="ttu fw4 f2 near-white">Posts</h1>
-       {{ range first 20 .Data.Pages }}
+      {{ .Content }}
+      {{ range first 20 .Data.Pages }}
           {{ if eq .Type "post"}}
             <h2><a class="link dim dark-green" href="{{ .Permalink }}">{{ .Title }}</a></h2>
             {{ .Render "summary"}}
