--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,6 +1,7 @@
-{{ "<!-- ENTERING layouts/_default/terms.html -->" | safeHTML }}
-{{ partial "header.html" . }}
-
+{{ define "header" }}
+  {{- partial "header.html" . -}}
+{{ end }}
+{{ define "main" }}
 <main class="mw7 center">
   <div class="pb2">
     <h1 class="ttu fw4 f2 near-white">Taxonomy</h1>
@@ -15,5 +16,7 @@
     </p>
   </div>
 </main>
-{{ partial "footer.html" . }}
-{{ "<!-- LEAVING layouts/_default/terms.html -->" | safeHTML }}
+{{ end }}
+{{ define "footer" }}
+  {{- partial "footer.html" . -}}
+{{ end }}
