--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -4,7 +4,7 @@
 {{ define "main" }}
 <main class="mw7 center">
   <div>
-   <h1 class="ttu fw4 f2 near-white">{{ .Title }}</h1>
+   <h1 class="ttu fw4 f2 moon-gray">{{ .Title }}</h1>
        {{ .Content }}
            {{ range .Data.Pages.GroupByDate "2006" }}
             <h2 class="ttu f3 blue">{{ .Key }}</h2>
