--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,8 @@
 {{ end }}
 {{ define "main" }}
   <main class="mw7 center">
-    <h1 class="ttu fw4 f2 near-white">{{ .Title }}</h1>
+    <h1 class="ttu fw4 f2 moon-gray">{{ .Title }}</h1>
+    <h2 class="gold">Welcome</h2>
       {{ .Content }}
       {{ range first 20 .Data.Pages }}
           {{ if eq .Type "post"}}
