--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>{{ .Title }}{{ if ne .Title .Site.Title }} : {{ .Site.Title }}{{ end }}</title>
     <meta name="author" content="Rick Cogley">
-    <meta name="description" content="{{ if and (eq .Kind "taxonomy") (eq .Kind "taxonomyTerm") }}Content under '{{ .Title }}' at RC Live, short blog posts from Rick Cogley.{{ else }}{{ .Summary }}{{ end }}">
+    <meta name="description" content="{{ if and (eq .Kind "taxonomy") (eq .Kind "taxonomyTerm") }}Content under '{{ .Title }}' at RC Live, short blog posts from Rick Cogley.{{ else }}{{- .Summary -}}{{ end }}">
     <meta name="keywords" content="{{ if isset .Params "tags" }}{{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}{{ else }}{{.Site.Params.keywords}}{{ end }}">
     <link href="http://gmpg.org/xfn/11" rel="profile">
     {{ .Hugo.Generator }}
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="{{ "fonts/PragmataPro0.824W/PragmataPro-Regular0.824W/stylesheet.css" | relURL }}">
     <link rel="stylesheet" href="{{ "fonts/PragmataPro0.824W/PragmataPro-Italic0.824W/stylesheet.css" | relURL }}">
     <link rel="stylesheet" href="{{ "fonts/PragmataPro0.824W/PragmataPro-Bold0.824W/stylesheet.css" | relURL }}">
-
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+    <link rel="stylesheet" href="{{ "css/typography.css" | relURL }}">
     <style>
         .geomicon { width: 1.5em; height: 1.5em; }
         body{ font-family:'pragmatapro', sans-serif; }
