--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,14 +7,13 @@
 
 <body>
 
-      <header class="tc pa1 bb bg-washed-blue b--light-gray">
+      <header class="tc pa1 bb bg-moon-gray b--light-blue">
          <nav class="db dt-l w-100 border-box pa3 ph5-l">
            <a class="db dtc-l v-mid gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="{{ "/" | relURL }}" title="Home">
              <img src="{{ "img/Rick_Run_201409 120x120.JPG" | relURL }}" class="dib w3 h3 br-100" alt="Rick Cogley Photo">
             </a>
-            <h1 class="dark-pink">RC&nbsp;Live</h1>
             <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-              <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "/" | relURL }}" title="Home">Home</a>
+              <a class="link dim dark-pink f6 f5-l dib mr3 mr4-l" href="{{ "/" | relURL }}" title="Home">RC Live: <span class="dark-green">Home</span></a>
               <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "post"| relURL }}" title="Archive">Archive</a>
               <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "tags"| relURL }}" title="Tags">Tags</a>
               <a class="link dim dark-green f6 f5-l dib" href="https://rick.cogley.info/about" title="About Rick Cogley" target="_blank">About Me</a>
