--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -4,7 +4,7 @@
 {{ define "main" }}
 <main class="mw7 center">
   <div class="pb2">
-    <h1 class="ttu fw4 f2 near-white">Taxonomy</h1>
+    <h1 class="ttu fw4 f2 moon-gray">Taxonomy</h1>
     <h2 class="ttu f3 dark-green">Site {{ .Title }}</h2>
     <p>
     {{ $data := .Data }}
