--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,8 +4,7 @@
 {{ define "main" }}
   <main class="mw7 center">
     <h1 class="ttu fw4 dark-pink">&#xE380; The dreaded &laquo;{{ .Title }}&raquo;&nbsp;&#x2620;</h1>
-    Thanks for visiting. You've reached my 404 page, meaning the content you tried to access cannot be found. Scan the below list of site taxonomies and click through to something of interest.
-    {{ .Content }}
+    Thanks for visiting. You've reached my {{ .Kind }} page, meaning the content you tried to access cannot be found. Scan the below list of site taxonomies and click through to something of interest.
     <ul>
     {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
       <li><a class="link dim" href="/{{ $taxonomyname | urlize }}"><h2 class="dark-green">{{ $taxonomyname }}</h2></a>
