Change main's mw7 to w-70, since it's single col, for better mobile look

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -2,7 +2,7 @@
   {{- partial "header.html" . -}}
 {{ end }}
 {{ define "main" }}
-<main class="mw7 center">
+<main class="w-70 center">
   <div class="pb2">
     <h1 class="ttu fw4 f2 moon-gray">Taxonomy</h1>
     <h2 class="ttu f3 dark-green">Site {{ .Title }}</h2>
