--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
   {{- partial "header.html" . -}}
 {{ end }}
 {{ define "main" }}
-  <main class="mw7 center">
+  <main class="w-70 center">
     <h1 class="ttu fw4 f2 moon-gray">{{ .Title }}</h1>
     <h2 class="gold">Welcome</h2>
       {{ .Content }}
