--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
   {{- partial "header.html" . -}}
 {{ end }}
 {{ define "main" }}
-  <main class="mw7 center">
+  <main class="w-70 center">
     <h1 class="ttu fw4 dark-pink">&#xE380; The dreaded &laquo;{{ .Title }}&raquo;&nbsp;&#x2620;</h1>
     Thanks for visiting. You've reached my {{ .Kind }} page, meaning the content you tried to access cannot be found. Scan the below list of site taxonomies and click through to something of interest.
     <ul>
