--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 {{ end }}
 {{ define "main" }}
 
-  <main class="mw7 center">
+  <main class="w-70 center">
 
     <h1>{{ .Title }}</h1>
     <h2>{{ .Date.Format "Monday, 2 Jan, 2006" }}</h2>
