remove typography css for now

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="{{ "fonts/PragmataPro0.824W/PragmataPro-Italic0.824W/stylesheet.css" | relURL }}">
     <link rel="stylesheet" href="{{ "fonts/PragmataPro0.824W/PragmataPro-Bold0.824W/stylesheet.css" | relURL }}">
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
-    <link rel="stylesheet" href="{{ "css/typography.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "css/atypography.css" | relURL }}">
     <style>
         .geomicon { width: 1.5em; height: 1.5em; }
         body{ font-family:'pragmatapro', sans-serif; }
