--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
              <img src="{{ "img/Rick_Run_201409 120x120.JPG" | relURL }}" class="dib w3 h3 br-100" alt="Rick Cogley Photo">
             </a>
             <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-              <a class="link dim dark-pink f6 f5-l dib mr3 mr4-l" href="{{ "/" | relURL }}" title="Home">RC Live: <span class="dark-green">Home</span></a>
+              <a class="link dim dark-pink f6 f5-l dib mr3 mr4-l" href="{{ "/" | relURL }}" title="Home"><span class="ss07">RC Live: </span><span class="dark-green">Home</span></a>
               <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "post"| relURL }}" title="Archive">Archive</a>
               <a class="link dim dark-green f6 f5-l dib mr3 mr4-l" href="{{ "tags"| relURL }}" title="Tags">Tags</a>
               <a class="link dim dark-green f6 f5-l dib" href="https://rick.cogley.info/about" title="About Rick Cogley" target="_blank">About Me</a>
