--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
 
   <main class="w-70 pb2 center">
 
-    <h1>{{ .Title }}</h1>
+    <h1 class="ss09">{{ .Title }}</h1>
     <h2>{{ .Date.Format "Monday, 2 Jan, 2006" }}</h2>
       {{ .Content }}
 
