--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
   {{- partial "header.html" . -}}
 {{ end }}
 
-<body>
+<body class="ma0">
 
       <header class="tc pa1 bb bg-moon-gray b--light-blue">
          <nav class="db dt-l w-100 border-box pa3 ph5-l">
