Add hugo info to header since we are now baking it in
Thanks to @kaushalmodi :-)

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,14 +8,17 @@
     <meta name="description" content="{{ if and (eq .Kind "taxonomy") (eq .Kind "taxonomyTerm") }}Content under '{{ .Title }}' at RC Live, short blog posts from Rick Cogley.{{ else }}{{- .Summary -}}{{ end }}">
     <meta name="keywords" content="{{ if isset .Params "tags" }}{{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}{{ else }}{{.Site.Params.keywords}}{{ end }}">
     <link href="http://gmpg.org/xfn/11" rel="profile">
-    {{ .Hugo.Generator }}
     <link rel="canonical" href="{{ .Permalink }}">
     {{ if .RSSLink }}
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
     <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
     {{ end }}
+    <!-- Hugo info -->
+    {{ printf "<!--Hugo Build Date: %s-->" .Hugo.BuildDate | safeHTML }}
+    {{ printf "<!--Hugo Commit Hash: %s-->" .Hugo.CommitHash | safeHTML }}
+    {{ .Hugo.Generator }}
 
-<!-- Enable responsiveness on mobile devices-->
+    <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
