--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,10 +1,16 @@
-<!-- figure1 curlycurlyless figure1 link="/img/aaa.jpg" src="/img/aaa.jpg" type="photo" title="blah blah"  greatercurlycurly -->
-<figure class="xs-hide col-3 mxn12 left fit">
-  <a href="{{ .Get "link" }}" title="{{ .Get "title" }}" data-lightbox="set1" data-title="{{ .Get "title" }}"><img class="rounded center border border-darken-1 {{ with .Get "class" }}{{ . }}{{ end }}" src="{{ .Get "src" }}" alt="{{ .Get "type"  }} - {{ .Get "title" }}" ></a>
-  <figcaption class="sans"><em>{{ .Get "type" }}</em>: {{ .Get "title" }}</figcaption>
+<!-- curlycurlyless figure imgname="name-of-image-no-extension" width="500x" type="photo" title="blah blah"  greatercurlycurly -->
+<figure class="tc grow">
+{{ $imgname := .Get "imgname" }}
+{{ $imgwidth := .Get "width" }}
+{{ $img := $.Page.Resources.GetByPrefix $imgname }}
+{{ $scaled := $img.Resize $imgwidth }}
+  <a href="{{ $img.Permalink }}" title="{{ .Get "title" }}">
+  <img class="ba br3 b--black-30" src="{{ $scaled.Permalink }}" alt="{{ .Get "type"  }} - {{ .Get "title" }}" >
+  </a>
+  <figcaption class="f6"><em>{{ .Get "type" }}</em>: {{ .Get "title" }}</figcaption>
 </figure>
-<figure class="sm-hide md-hide lg-hide col-10 fit">
-  <a href="{{ .Get "link" }}" title="{{ .Get "title" }}" data-title="{{ .Get "title" }}"><img class="rounded center border border-darken-1 {{ with .Get "class" }}{{ . }}{{ end }}" src="{{ .Get "src" }}" alt="{{ .Get "type"  }} - {{ .Get "title" }}" ></a>
-  <figcaption class="sans center"><em>{{ .Get "type" }}</em>: {{ .Get "title" }}</figcaption>
-</figure>
-<!-- figure1  -->
+
+<!-- end figure  -->
+
+
+
