--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,12 +6,14 @@
     <h1 class="ttu fw4 f2 moon-gray">{{ .Title }}</h1>
     <h2 class="gold">Welcome</h2>
       {{ .Content }}
-      {{ range first 20 .Data.Pages }}
-          {{ if eq .Type "post"}}
+
+      {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+        {{ partial "pagination.html" . }}
+        {{ range $paginator.Pages }}
             <h2><a class="link dim dark-green" href="{{ .Permalink }}">{{ .Title }}</a></h2>
             {{- partial "summary.html" . -}}
-          {{ end }}
-      {{ end }}
+        {{ end }}
+        {{ partial "pagination.html" . }}
   </main>
 {{ end }}
 {{ define "footer" }}
