--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -2,12 +2,12 @@
 {{ if gt $pag.TotalPages 1 }}
 <ul class="list ph3 ph5-ns pv4">
     {{ with $pag.First }}
-    <li class="dib mr2">
-       <a href="{{ .URL }}" aria-label="First"><span aria-hidden="true">&laquo;&laquo;</span></a>
+    <li class="dib mr2 grow">
+       <a href="{{ .URL }}" aria-label="First" class="f3 br2 no-underline link white bg-dark-pink hover-washed-yellow bg-animate hover-bg-dark-blue"><span aria-hidden="true">&laquo;&laquo;</span></a>
     </li>
     {{ end }}
-    <li class="dib mr2{{ if not $pag.HasPrev }} disabled{{ end }}">
-       <a href="{{ if $pag.HasPrev }}{{ $pag.Prev.URL }}{{ end }}" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a>
+    <li class="dib mr2 grow">
+       <a href="{{ if $pag.HasPrev }}{{ $pag.Prev.URL }}{{ else }}#{{ end }}" aria-label="Previous" class="f3 br2 no-underline link white bg-dark-pink hover-washed-yellow bg-animate hover-bg-dark-blue"><span aria-hidden="true">&laquo;</span></a>
     </li>
     {{ $.Scratch.Set "__paginator.ellipsed" false }}
     {{ range $pag.Pagers }}
@@ -22,21 +22,21 @@
         {{ $.Scratch.Set "__paginator.ellipsed" true }}
     {{ end }}
     {{ if $showNumber }}
-    <li class="dib mr2{{ if eq . $pag }} active{{ end }}">
-       <a href="{{ .URL }}">{{ .PageNumber }}</a>
+    <li class="dib mr2 grow">
+       <a href="{{ .URL }}" class="f3 br2 no-underline link white{{ if eq . $pag }} bg-gold{{ else }} bg-dark-blue{{ end }} hover-washed-yellow bg-animate hover-bg-orange">{{ .PageNumber }}</a>
     </li>
     {{ else if ($.Scratch.Get "__paginator.shouldEllipse") }}
-    <li class="dib mr2 disabled">
+    <li class="dib mr2 grow disabled">
        <span aria-hidden="true">&hellip;</span>
     </li>
     {{ end }}
     {{ end }}
-    <li class="dib mr2{{ if not $pag.HasNext }} disabled{{ end }}">
-       <a href="{{ if $pag.HasNext }}{{ $pag.Next.URL }}{{ end }}" aria-label="Next"><span aria-hidden="true">&raquo;</span></a>
+    <li class="dib mr2 grow">
+       <a href="{{ if $pag.HasNext }}{{ $pag.Next.URL }}{{ else }}#{{ end }}" aria-label="Next" class="f3 br2 no-underline link white bg-dark-green hover-washed-yellow bg-animate hover-bg-dark-blue"><span aria-hidden="true">&raquo;</span></a>
     </li>
     {{ with $pag.Last }}
-    <li class="dib mr2">
-        <a href="{{ .URL }}" aria-label="Last"><span aria-hidden="true">&raquo;&raquo;</span></a>
+    <li class="dib mr2 grow">
+        <a href="{{ .URL }}" aria-label="Last" class="f3 br2 no-underline link white bg-dark-green hover-washed-yellow bg-animate hover-bg-dark-blue"><span aria-hidden="true">&raquo;&raquo;</span></a>
     </li>
     {{ end }}
 </ul>
