see if footer will still work for taxo
Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,4 +10,5 @@
         </small>
         <!-- {{ if .IsPage }}<small class="gray"><em>Updated: {{ .Page.Lastmod }}, Version: {{ .GitInfo.AbbreviatedHash }}</em></small>{{ end }} -->
         {{ if and (ne .Kind "taxonomy") (ne .Kind "taxonomyTerm") (ne .Kind "404") }}<small class="gray c2sc"><em>Updated: {{ .Lastmod }} {{ .GitInfo.AbbreviatedHash }}</em></small>{{ end }}
+        <small class="gray c2sc"><em>Updated: {{ .Lastmod }} {{ .GitInfo.AbbreviatedHash }}</em></small>
 </footer>
