--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,14 +9,13 @@
     <meta name="keywords" content="{{ if isset .Params "tags" }}{{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}{{ else }}{{.Site.Params.keywords}}{{ end }}">
     <link href="http://gmpg.org/xfn/11" rel="profile">
     <link rel="canonical" href="{{ .Permalink }}">
-    {{ if .RSSLink }}
-    <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-    <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
-    {{ end }}
+    {{ range .AlternativeOutputFormats -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+    {{ end -}}
     <!-- Hugo info -->
-    {{ printf "<!--Hugo Build Date: %s-->" .Hugo.BuildDate | safeHTML }}
-    {{ printf "<!--Hugo Commit Hash: %s-->" .Hugo.CommitHash | safeHTML }}
-    {{ .Hugo.Generator }}
+    {{ printf "<!--Hugo Build Date: %s-->" hugo.BuildDate | safeHTML }}
+    {{ printf "<!--Hugo Commit Hash: %s-->" hugo.CommitHash | safeHTML }}
+    {{ hugo.Generator }}
 
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
